[client++]: completed the customer part
