# api/src/modules/vehicles/dto/update-vehicle.dto.ts
@@ -1,3 +1,3 @@
 export class UpdateVehicleDto {
-  licensePlate?: string;
+  plateNumber?: string;
 }
